--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,6 @@
 <resources>
     <string name="app_name">Counter</string>
-    <string name="set">Настроить</string>
-    <string name="reset">Сброс</string>
-    <string name="reset_dialog_message">Сбросить счетчик?</string>
-    <string name="set_count_title">Настройте счетчик:</string>
-    <string name="enter_int_toast">Введите число</string>
-    <string name="press_back">Нажмите еще раз, чтобы выйти</string>
-    <string name="start_chrono">Старт</string>
-    <string name="stop_chrono">Стоп</string>
-    <string name="msg_no_history">История пуста</string>
-    <string name="add">В историю</string>
-    <string name="set_time_title">Установите время работы:</string>
-    <string name="hint_enter_note">Введите новое значение:</string>
-    <string name="history">История</string>
-    <string name="delete_all">Delete All</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="exit_message">Exit from App?</string>
 </resources>
