--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="change_hours_hint">Укажите количество часов</string>
     <string name="add_day_hint">Добавьте новый день</string>
     <string name="save">Сохранить</string>
+    <string name="remove">Удалить?</string>
 </resources>
